objects/TANCSBenchmark__c/TANCSBenchmark__c.object-meta.xml
<CustomObject>
    <description>This is the resultant benchmark from Beck&apos;s (etc) Customer Success Benchmark on a customer.</description>
    <label>Tanium CS Benchmark</label>
    <nameField>
        <label>TANCSBenchmark</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanium CS Benchmark</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>