objects/TANCSBenchmark__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account the CS Benchmark is of.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tanium CS Benchmark</relationshipLabel>
    <relationshipName>Tanium_CS_Benchmark</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>