objects/TANCSBenchmark__c/fields/advocacyCProductEvolution__c.field-meta.xml
<CustomField>
    <fullName>advocacyCProductEvolution__c</fullName>
    <description>Comments about Advocacy - Product Evolution</description>
    <label>advocacyCProductEvolution</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>