objects/TANCSBenchmark__c/fields/advocacyCUserCommunity__c.field-meta.xml
<CustomField>
    <fullName>advocacyCUserCommunity__c</fullName>
    <description>Comments about Advocacy User Community</description>
    <label>advocacyCUserCommunity</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>