objects/TANCSBenchmark__c/fields/advocacySReferenceSeller__c.field-meta.xml
<CustomField>
    <fullName>advocacySReferenceSeller__c</fullName>
    <description>DEFINITION: Either informally or formally. Either on own accord or at Taniumâ€™s request

IMPORTANCE: 101</description>
    <label>advocacySReferenceSeller</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>