objects/TANCSBenchmark__c/fields/advocacySUserCommunity__c.field-meta.xml
<CustomField>
    <fullName>advocacySUserCommunity__c</fullName>
    <description>DEFINITION: Everything from passive consumption (downloading a white paper, attending a webinar) through to active participation (a joint case study, attending Converge or presenting at Converge)

IMPORTANCE: As above. Emotionally invested in our expertise. Participating in our content and community demonstrates commitment, value derived and knowledge transfer</description>
    <label>advocacySUserCommunity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>