objects/TANCSBenchmark__c/fields/current__c.field-meta.xml
<CustomField>
    <fullName>current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this CS Benchmark is the current one.</description>
    <label>current</label>
    <type>Checkbox</type>
</CustomField>