objects/TANCSBenchmark__c/fields/deployCDeploymentPlan__c.field-meta.xml
<CustomField>
    <fullName>deployCDeploymentPlan__c</fullName>
    <description>Comments about Deploy Deployment plan</description>
    <label>deployCDeploymentPlan</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>