objects/TANCSBenchmark__c/fields/deployCRaidLog__c.field-meta.xml
<CustomField>
    <fullName>deployCRaidLog__c</fullName>
    <description>Comments about Deployment Raid Log</description>
    <label>deployCRaidLog</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>