objects/TANCSBenchmark__c/fields/deployCSignOff__c.field-meta.xml
<CustomField>
    <fullName>deployCSignOff__c</fullName>
    <description>Comments about Deployment Sign Off</description>
    <label>deployCSignOff</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>