objects/TANCSBenchmark__c/fields/deployCSupportModel__c.field-meta.xml
<CustomField>
    <fullName>deployCSupportModel__c</fullName>
    <description>Comments about Deployment Support Model</description>
    <label>deployCSupportModel</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>