objects/TANCSBenchmark__c/fields/deployCTechIntegration__c.field-meta.xml
<CustomField>
    <fullName>deployCTechIntegration__c</fullName>
    <description>Comments about Deployment Tech Integration</description>
    <label>deployCTechIntegration</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>