objects/TANCSBenchmark__c/fields/deployCTraining__c.field-meta.xml
<CustomField>
    <fullName>deployCTraining__c</fullName>
    <description>Comments about Deployment Training</description>
    <label>deployCTraining</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>