objects/TANCSBenchmark__c/fields/deployCUseCaseImplementation__c.field-meta.xml
<CustomField>
    <fullName>deployCUseCaseImplementation__c</fullName>
    <description>Comments about Deploy Use Case Implementation</description>
    <label>deployCUseCaseImplementation</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>