objects/TANCSBenchmark__c/fields/deployCUserPolicy__c.field-meta.xml
<CustomField>
    <fullName>deployCUserPolicy__c</fullName>
    <description>Comments about Deployment User Policy</description>
    <label>deployCUserPolicy</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>