objects/TANCSBenchmark__c/fields/deployScore__c.field-meta.xml
<CustomField>
    <fullName>deployScore__c</fullName>
    <description>Total Score for deployment measures</description>
    <formula>( deploySDeploymentPlan__c  +  deploySQuickWins__c  +  deploySRaidLog__c  +  deploySStakeholderMap__c  +  deploySUserPolicy__c  +  deploySTechIntegration__c +  deploySTraining__c +   salesSSignOff__c +  deploySUseCaseImplementation__c +  deploySSupportModel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>deployScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>