objects/TANCSBenchmark__c/fields/deploySDeploymentPlan__c.field-meta.xml
<CustomField>
    <fullName>deploySDeploymentPlan__c</fullName>
    <description>DEFINITION: A documented plan outlining workstreams, tasks, timeframes and owners to get to the goal of 100% deployment. Core document. Reviewed frequently
IMPORTANCE: 101</description>
    <label>deploySDeploymentPlan</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>