objects/TANCSBenchmark__c/fields/deploySQuickWins__c.field-meta.xml
<CustomField>
    <fullName>deploySQuickWins__c</fullName>
    <description>DEFINITION: Have we exhausted opportunities to show incremental value in parallel to deployment (i.e. documenting use cases, processes, writing sensors, building dashboards, testing integration, ROI, training, general consulting)

IMPORTANCE: For longer deployments, the quicker we show value the better. What can we do in parallel. Get creative. Go above and beyond</description>
    <label>deploySQuickWins</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>