objects/TANCSBenchmark__c/fields/deploySRaidLog__c.field-meta.xml
<CustomField>
    <fullName>deploySRaidLog__c</fullName>
    <description>DEFINITION: A documented log outlining risks, issues, actions. Core document. Reviewed frequently

IMPORTANCE: 101</description>
    <label>deploySRaidLog</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>