objects/TANCSBenchmark__c/fields/deploySSignOff__c.field-meta.xml
<CustomField>
    <fullName>deploySSignOff__c</fullName>
    <description>DEFINITION: Written confirmation of customerâ€™s satisfaction of every element of the deployment (or leveraging customerâ€™s project / change management methodology). In particular signing off use cases have been built as expected

IMPORTANCE: Concludes the stage. Baseline agreement. Service acceptance. Use cases fully operational</description>
    <label>deploySSignOff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>