objects/TANCSBenchmark__c/fields/deploySStakeholderMap__c.field-meta.xml
<CustomField>
    <fullName>deploySStakeholderMap__c</fullName>
    <description>DEFINITION: A documented org chart showing reporting lines and political power. Continuation from Sales stage\n\nIMPORTANCE: We will be interacting with new teams, stakeholders. The better we understand their motivations, the more successful everyone will be</description>
    <label>deploySStakeholderMap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>