objects/TANCSBenchmark__c/fields/deploySTraining__c.field-meta.xml
<CustomField>
    <fullName>deploySTraining__c</fullName>
    <description>DEFINITION: Classroom based or webex based training sessions covering topics relevant to customer&apos;s deployment. Also any customized training

IMPORTANCE: 101</description>
    <label>deploySTraining</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>