objects/TANCSBenchmark__c/fields/deploySUseCaseImplementation__c.field-meta.xml
<CustomField>
    <fullName>deploySUseCaseImplementation__c</fullName>
    <description>DEFINITION: To what extent are we constructing the Platform, modules, settings, sensors, dashboards, integrations and reporting around the use cases that we signed off in deployment. Documented?

IMPORTANCE: Continuity in delivering on the use cases that were proven successful during Sales</description>
    <label>deploySUseCaseImplementation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>