objects/TANCSBenchmark__c/fields/deploySUserPolicy__c.field-meta.xml
<CustomField>
    <fullName>deploySUserPolicy__c</fullName>
    <description>DEFINITION: A workshop and policy / flowchart output that determines how new users are validated and which Platform roles they are assigned

IMPORTANCE: Demonstrable control over the Platform. Clarity. Risk management</description>
    <label>deploySUserPolicy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>