objects/TANCSBenchmark__c/fields/effectiveDate__c.field-meta.xml
<CustomField>
    <fullName>effectiveDate__c</fullName>
    <description>This was the date the benchmark was completed / carried out / synthesized.</description>
    <label>effectiveDate</label>
    <type>DateTime</type>
</CustomField>