objects/TANCSBenchmark__c/fields/salesCMeddic__c.field-meta.xml
<CustomField>
    <fullName>salesCMeddic__c</fullName>
    <description>Comments about Sales Meddic</description>
    <label>salesCMeddic</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>