objects/TANCSBenchmark__c/fields/salesCPainPoints__c.field-meta.xml
<CustomField>
    <fullName>salesCPainPoints__c</fullName>
    <description>Comments about Sales Pain Points</description>
    <label>salesCPainPoints</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>