objects/TANCSBenchmark__c/fields/salesCRiskManagement__c.field-meta.xml
<CustomField>
    <fullName>salesCRiskManagement__c</fullName>
    <description>Comments about Sales Risk Management</description>
    <label>salesCRiskManagement</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>