objects/TANCSBenchmark__c/fields/salesCROI__c.field-meta.xml
<CustomField>
    <fullName>salesCROI__c</fullName>
    <description>Comments about Sales ROI</description>
    <label>salesCROI</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>