objects/TANCSBenchmark__c/fields/salesCSignOff__c.field-meta.xml
<CustomField>
    <fullName>salesCSignOff__c</fullName>
    <description>Comments about Sales Sign Off</description>
    <label>salesCSignOff</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>