objects/TANCSBenchmark__c/fields/salesCStakeholderMap__c.field-meta.xml
<CustomField>
    <fullName>salesCStakeholderMap__c</fullName>
    <description>Comments about Sales Stakeholder Map</description>
    <label>salesCStakeholderMap</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>