objects/TANCSBenchmark__c/fields/salesCUseCases__c.field-meta.xml
<CustomField>
    <fullName>salesCUseCases__c</fullName>
    <description>Comments about Sales Use Cases</description>
    <label>salesCUseCases</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>