objects/TANCSBenchmark__c/fields/salesSClosePlan__c.field-meta.xml
<CustomField>
    <fullName>salesSClosePlan__c</fullName>
    <description>DEFINITION: A documented set of actions for both organizations, tracking back from deal close date

IMPORTANCE: A coordinated set of actions that holds all stakeholders accountable to close the deal by due date. Rallies the team. Reduces risk of slippage</description>
    <label>salesSClosePlan</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>