objects/TANCSBenchmark__c/fields/salesScore__c.field-meta.xml
<CustomField>
    <fullName>salesScore__c</fullName>
    <description>Combination of all of the salesS Scores</description>
    <formula>(salesSPainPoints__c  +  salesSStakeholderMap__c +  salesSEvalGuide__c  +  salesSUseCases__c +  salesSRiskManagement__c  +  salesSSuccessStories__c  +  salesSROI__c  +  salesSMeddic__c +  salesSClosePlan__c +  salesSSignOff__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>salesScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>