objects/TANCSBenchmark__c/fields/salesSMeddic__c.field-meta.xml
<CustomField>
    <fullName>salesSMeddic__c</fullName>
    <description>DEFINITION: Formal check list of deal (and customer) success criteria

IMPORTANCE: Metrics (ROI), Economic Buyer, Decision Criteria, Decision Process, Identify Pain, Champion</description>
    <label>salesSMeddic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>