objects/TANCSBenchmark__c/fields/salesSRiskManagement__c.field-meta.xml
<CustomField>
    <fullName>salesSRiskManagement__c</fullName>
    <description>DEFINITION: What are the top risks to a) the deal and b) the customer being successful and how are we mitigating them?

IMPORTANCE: Effective risk management will remove issues before they arise</description>
    <label>salesSRiskManagement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>