objects/TANCSBenchmark__c/fields/salesSROI__c.field-meta.xml
<CustomField>
    <fullName>salesSROI__c</fullName>
    <description>DEFINITION: How have we introduced savings or efficiencies?

IMPORTANCE: Quantifiable, detailed and fact based ROI is the top measure of value. A universal common denominator</description>
    <label>salesSROI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>