objects/TANCSBenchmark__c/fields/salesSStakeholderMap__c.field-meta.xml
<CustomField>
    <fullName>salesSStakeholderMap__c</fullName>
    <description>DEFINITION: A documented org chart showing reporting lines and political power

IMPORTANCE: Sales, TAMs and Execs need to be clear on who is who. Influencers. Detractors and supporters. Will evolve as campaign progresses</description>
    <label>salesSStakeholderMap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>