objects/TANCSBenchmark__c/fields/salesSUseCases__c.field-meta.xml
<CustomField>
    <fullName>salesSUseCases__c</fullName>
    <description>DEFINITION: Is there a clear, documented set of use cases that form the basis of Tanium&apos;s use?

IMPORTANCE: A clear, referenceable document to remove ambiguity, demonstrate Tanium&apos;s understanding. Provides clear foundation to move forward. Helps to provide clarity of use vs shelf ware</description>
    <label>salesSUseCases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>