objects/TANCSBenchmark__c/fields/serviceCDocumentation__c.field-meta.xml
<CustomField>
    <fullName>serviceCDocumentation__c</fullName>
    <description>Comments about Service Documentation</description>
    <label>serviceCDocumentation</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>