objects/TANCSBenchmark__c/fields/serviceCExpansionTracking__c.field-meta.xml
<CustomField>
    <fullName>serviceCExpansionTracking__c</fullName>
    <description>Comments about Service Expansion Tracking</description>
    <label>serviceCExpansionTracking</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>