objects/TANCSBenchmark__c/fields/serviceCHealthMonitoring__c.field-meta.xml
<CustomField>
    <fullName>serviceCHealthMonitoring__c</fullName>
    <description>Comments about Service Health Monitoring</description>
    <label>serviceCHealthMonitoring</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>