objects/TANCSBenchmark__c/fields/serviceCImprovementPlan__c.field-meta.xml
<CustomField>
    <fullName>serviceCImprovementPlan__c</fullName>
    <description>Comments about Service Improvement Plan</description>
    <label>serviceCImprovementPlan</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>