objects/TANCSBenchmark__c/fields/serviceCProcessIntegration__c.field-meta.xml
<CustomField>
    <fullName>serviceCProcessIntegration__c</fullName>
    <description>Comments about Service Process Integration</description>
    <label>serviceCProcessIntegration</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>