objects/TANCSBenchmark__c/fields/serviceCQBRs__c.field-meta.xml
<CustomField>
    <fullName>serviceCQBRs__c</fullName>
    <description>Comments about Service QBRs</description>
    <label>serviceCQBRs</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>