objects/TANCSBenchmark__c/fields/serviceCRegularMeetings__c.field-meta.xml
<CustomField>
    <fullName>serviceCRegularMeetings__c</fullName>
    <description>Comments about Service Regular Meetings</description>
    <label>serviceCRegularMeetings</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>