objects/TANCSBenchmark__c/fields/serviceCRenewalTracking__c.field-meta.xml
<CustomField>
    <fullName>serviceCRenewalTracking__c</fullName>
    <description>Comments about Service Renewal Tracking</description>
    <label>serviceCRenewalTracking</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>