objects/TANCSBenchmark__c/fields/serviceCRoiProved__c.field-meta.xml
<CustomField>
    <fullName>serviceCRoiProved__c</fullName>
    <description>Comments about Service ROI Proved</description>
    <label>serviceCRoiProved</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>