objects/TANCSBenchmark__c/fields/serviceCStrategyGoals__c.field-meta.xml
<CustomField>
    <fullName>serviceCStrategyGoals__c</fullName>
    <description>Comments about Service Strategy Goals</description>
    <label>serviceCStrategyGoals</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>