objects/TANCSBenchmark__c/fields/serviceCSupport__c.field-meta.xml
<CustomField>
    <fullName>serviceCSupport__c</fullName>
    <description>Comments about Service Support</description>
    <label>serviceCSupport</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>