objects/TANCSBenchmark__c/fields/serviceCTechIntegration__c.field-meta.xml
<CustomField>
    <fullName>serviceCTechIntegration__c</fullName>
    <inlineHelpText>Comments for Service Tech Integration</inlineHelpText>
    <label>serviceCTechIntegration</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>