objects/TANCSBenchmark__c/fields/serviceCUseCases__c.field-meta.xml
<CustomField>
    <fullName>serviceCUseCases__c</fullName>
    <description>Comments about Service Use Cases</description>
    <label>serviceCUseCases</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>