objects/TANCSBenchmark__c/fields/serviceScore__c.field-meta.xml
<CustomField>
    <fullName>serviceScore__c</fullName>
    <description>Score from the service sub pieces</description>
    <formula>( serviceSStrategyGoals__c +  serviceSSupport__c +  serviceSHealthMonitoring__c +  serviceSImprovementPlan__c +  serviceSDocumentation__c +  serviceSRegularMeetings__c +  serviceSTechIntegration__c +   serviceSProcessIntegration__c +  serviceSUseCases__c +  serviceSRoiProved__c +  serviceSQBRs__c +  serviceSRenewalTracking__c +  serviceSExpansionTracking__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>serviceScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>