objects/TANCSBenchmark__c/fields/serviceSExpansionTracking__c.field-meta.xml
<CustomField>
    <fullName>serviceSExpansionTracking__c</fullName>
    <description>DEFINITION: How are we identifying, qualifying and pursuing expansion opps?

IMPORTANCE: 101. Ideally documented as part of account strategy / goals</description>
    <label>serviceSExpansionTracking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>