objects/TANCSBenchmark__c/fields/serviceSHealthMonitoring__c.field-meta.xml
<CustomField>
    <fullName>serviceSHealthMonitoring__c</fullName>
    <description>DEFINITION: How are we tracking the health of the account (technical and non)?

IMPORTANCE: No formal approach internally yet. Drawing up straw man metrics. Need to monitor health. 101</description>
    <label>serviceSHealthMonitoring</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>