objects/TANCSBenchmark__c/fields/serviceSImprovementPlan__c.field-meta.xml
<CustomField>
    <fullName>serviceSImprovementPlan__c</fullName>
    <description>DEFINITION: A documented â€˜Get Well Planâ€™ providing a path to overcome frustrations, with associated workstreams, actions and owners. (Score 0 if not needed)

IMPORTANCE: Improvement plan acknowledges pain. Need to contain the issue. Provides plan to happy place. Have we achieved that? Have we learned from the issue?</description>
    <label>serviceSImprovementPlan</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>