objects/TANCSBenchmark__c/fields/serviceSProcessIntegration__c.field-meta.xml
<CustomField>
    <fullName>serviceSProcessIntegration__c</fullName>
    <description>DEFINITION: How is Tanium embedded into documented business processes and controls

IMPORTANCE: As above. Tanium needs to be embedded everywhere. We need to be at the centre of people&apos;s day to day activities and core processes</description>
    <label>serviceSProcessIntegration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>