objects/TANCSBenchmark__c/fields/serviceSQBRs__c.field-meta.xml
<CustomField>
    <fullName>serviceSQBRs__c</fullName>
    <description>DEFINITION: Regular strategic meetings with all levels of both organizations

IMPORTANCE: Constant reinforcement of value. Exec exposure. Alignment</description>
    <label>serviceSQBRs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>