objects/TANCSBenchmark__c/fields/serviceSRenewalTracking__c.field-meta.xml
<CustomField>
    <fullName>serviceSRenewalTracking__c</fullName>
    <description>DEFINITION: How are we tracking the likelihood of each module renewing?

IMPORTANCE: 101. Advantageous at SKU level. Can only happen with regular health and value monitoring / interaction</description>
    <label>serviceSRenewalTracking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>