objects/TANCSBenchmark__c/fields/serviceSRoiProved__c.field-meta.xml
<CustomField>
    <fullName>serviceSRoiProved__c</fullName>
    <description>DEFINITION: How have we introduced savings or efficiencies?

IMPORTANCE: Have we achieved what we said we would? Where else have we shown value? How much? Are they documented in case anyone questions how and why we are used?</description>
    <label>serviceSRoiProved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>