objects/TANCSBenchmark__c/fields/serviceSStrategyGoals__c.field-meta.xml
<CustomField>
    <fullName>serviceSStrategyGoals__c</fullName>
    <description>DEFINITION: Documented, clear, agreed and shared

IMPORTANCE: Alignment across functions. Shared goals with client provide a baseline for measurement</description>
    <label>serviceSStrategyGoals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>