objects/TANCSBenchmark__c/fields/serviceSSupport__c.field-meta.xml
<CustomField>
    <fullName>serviceSSupport__c</fullName>
    <description>DEFINITION: Has the support experience been positive? Are they filing tickets using the formal (ZenDesk) process?

IMPORTANCE: Shortcomings in support can cause huge frustration. Requires measurement in future\n</description>
    <label>serviceSSupport</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>