objects/TANCSBenchmark__c/fields/serviceSTechIntegration__c.field-meta.xml
<CustomField>
    <fullName>serviceSTechIntegration__c</fullName>
    <description>DEFINITION: How are we using Tanium as a feed to other systems (SIEM, ServiceNow) or other systems to Tanium (IOC feeds, VirusTotal etc)

IMPORTANCE: Embed everywhere. Makes Tanium sticky. Tanium as golden source / data broker. Cannot rip out Tanium if it is the source for other systems</description>
    <label>serviceSTechIntegration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>