objects/TANCSBenchmark__c/fields/serviceSUseCases__c.field-meta.xml
<CustomField>
    <fullName>serviceSUseCases__c</fullName>
    <description>DEFINITION: Is there a clear, documented set of use cases that form the basis of Tanium&apos;s use?

IMPORTANCE: Have we achieved what we said we would? Where else have we shown value? How much? Are they documented in case anyone questions how and why we are used?</description>
    <label>serviceSUseCases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>