objects/TANCSBenchmark__c/fields/summary__c.field-meta.xml
<CustomField>
    <fullName>summary__c</fullName>
    <description>Summary of the CS Benchmark</description>
    <label>summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>